@@ -1,27 +1,0 @@
-/* IBM PowerPC64 native-dependent macros for GDB, the GNU debugger.
-   Copyright 2003, 2007 Free Software Foundation, Inc.
-
-This file is part of GDB.
-
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software
-Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.  */
-
-#ifndef NM_PPC64_LINUX_H
-
-#include "config/powerpc/nm-linux.h"
-
-#define PTRACE_ARG3_TYPE void *
-#define PTRACE_XFER_TYPE long
-
-#endif /* NM_PPC64_LINUX_H */
