@@ -2,7 +2,7 @@
 
 XM_CLIBS=
 
-NAT_FILE= nm-ppc64-linux.h
+NAT_FILE= nm-linux.h
 NATDEPFILES= inf-ptrace.o fork-child.o \
 	ppc-linux-nat.o proc-service.o linux-thread-db.o \
 	gcore.o linux-nat.o linux-fork.o
